# dependancy-scanner

./: Cargo.toml
src/: .main.rs.swp  main.rs
