[package]
name = "dep"
version = "0.1.0"
authors = ["GuyL99 <guy123levinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="^0.10"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
futures = { version = "0.3.5", default-features = true }
